--- a/brewingtimer/Base.lproj/LaunchScreen.storyboard
+++ b/brewingtimer/Base.lproj/LaunchScreen.storyboard
@@ -19,10 +19,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon" translatesAutoresizingMaskIntoConstraints="NO" id="o5Y-X0-mE5">
-                                <rect key="frame" x="100" y="-179" width="174" height="1024"/>
+                                <rect key="frame" x="100" y="-178.5" width="175" height="1024"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="175" id="9gA-6O-NUm"/>
+                                    <constraint firstAttribute="height" constant="1024" id="jYn-41-DId"/>
+                                </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hans-Wilhelm Warlo" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H27-SL-MVq">
-                                <rect key="frame" x="121" y="642" width="132" height="17"/>
+                                <rect key="frame" x="121.5" y="642" width="132" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -36,13 +40,12 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="o5Y-X0-mE5" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="4g9-8Y-UQY"/>
-                            <constraint firstItem="H27-SL-MVq" firstAttribute="top" secondItem="Jl6-BS-rHl" secondAttribute="bottom" constant="22" id="4hp-kf-cxj"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="H27-SL-MVq" secondAttribute="bottom" constant="8" id="LOm-Nr-amc"/>
-                            <constraint firstItem="Jl6-BS-rHl" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="e0m-hk-VUP"/>
-                            <constraint firstItem="o5Y-X0-mE5" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="100" id="tFa-hC-LSf"/>
-                            <constraint firstItem="H27-SL-MVq" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="twK-gz-CW3"/>
-                            <constraint firstItem="o5Y-X0-mE5" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="zeZ-Nh-sbU"/>
+                            <constraint firstItem="Jl6-BS-rHl" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="0V9-73-Viq"/>
+                            <constraint firstItem="H27-SL-MVq" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Iud-Yb-yNE"/>
+                            <constraint firstItem="o5Y-X0-mE5" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="NDn-fQ-C0p"/>
+                            <constraint firstItem="o5Y-X0-mE5" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="jq1-8Y-kRi"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="H27-SL-MVq" secondAttribute="bottom" constant="8" id="us6-A8-zz2"/>
+                            <constraint firstItem="H27-SL-MVq" firstAttribute="top" secondItem="Jl6-BS-rHl" secondAttribute="bottom" constant="22" id="ykY-rp-Q0w"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
