--- a/brewingtimer/Base.lproj/Main.storyboard
+++ b/brewingtimer/Base.lproj/Main.storyboard
@@ -21,15 +21,32 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mv0-Zc-Z7K">
-                                <rect key="frame" x="160" y="329.66666666666669" width="94" height="77"/>
+                                <rect key="frame" x="160" y="229.66666666666663" width="94" height="77"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="64"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FfR-R0-uFp">
+                                <rect key="frame" x="364" y="20" width="30" height="53"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="34"/>
+                                <state key="normal">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <segue destination="C6A-4n-dHu" kind="presentation" id="PFx-Sz-4Uf"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="26y-cX-jpA">
+                                <rect key="frame" x="20" y="448" width="374" height="179"/>
+                                <color key="backgroundColor" red="0.47289912560000003" green="0.47289912560000003" blue="0.47289912560000003" alpha="0.2544289173" colorSpace="custom" customColorSpace="displayP3"/>
+                            </imageView>
                             <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rV2-ac-D4Z">
                                 <rect key="frame" x="20" y="666" width="374" height="50"/>
                                 <color key="backgroundColor" red="0.3382448186" green="0.22908822170000001" blue="0.1518451358" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
+                                    <constraint firstAttribute="width" secondItem="rV2-ac-D4Z" secondAttribute="height" multiplier="187:25" id="G17-ip-WI7"/>
+                                    <constraint firstAttribute="width" secondItem="rV2-ac-D4Z" secondAttribute="height" multiplier="374:45" id="OdJ-6B-B65"/>
                                     <constraint firstAttribute="width" secondItem="rV2-ac-D4Z" secondAttribute="height" multiplier="9:1" id="UiA-0e-we6"/>
                                     <constraint firstAttribute="width" secondItem="rV2-ac-D4Z" secondAttribute="height" multiplier="15:2" id="XL4-Da-WWQ"/>
                                 </constraints>
@@ -57,36 +74,26 @@
                                     <action selector="click:" destination="BYZ-38-t0r" eventType="touchUpInside" id="KYs-ZR-HrN"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O4a-Xl-WCs">
-                                <rect key="frame" x="192.66666666666666" y="414.66666666666669" width="29" height="56.333333333333314"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="47"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gQz-IF-weJ">
+                                <rect key="frame" x="199.66666666666666" y="314" width="16.333333333333343" height="31.333333333333314"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FfR-R0-uFp">
-                                <rect key="frame" x="364" y="20" width="30" height="53"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="34"/>
-                                <state key="normal">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                                <connections>
-                                    <segue destination="C6A-4n-dHu" kind="presentation" id="PFx-Sz-4Uf"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="rV2-ac-D4Z" firstAttribute="leading" secondItem="Uee-0j-aNJ" secondAttribute="leading" constant="20" id="0Ty-gA-Rka"/>
-                            <constraint firstItem="Mv0-Zc-Z7K" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="DdO-nR-WFT"/>
-                            <constraint firstItem="rV2-ac-D4Z" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="GvM-Kh-wIs"/>
-                            <constraint firstItem="O4a-Xl-WCs" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="MDi-tF-wgE"/>
-                            <constraint firstItem="O4a-Xl-WCs" firstAttribute="top" secondItem="Mv0-Zc-Z7K" secondAttribute="bottom" constant="8" id="fdz-HU-8kj"/>
-                            <constraint firstItem="Mv0-Zc-Z7K" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="fhr-k0-jDb"/>
-                            <constraint firstItem="Uee-0j-aNJ" firstAttribute="bottom" secondItem="rV2-ac-D4Z" secondAttribute="bottom" constant="20" id="ssH-2r-1ME"/>
-                            <constraint firstItem="Uee-0j-aNJ" firstAttribute="trailing" secondItem="FfR-R0-uFp" secondAttribute="trailing" constant="20" id="tIr-Gs-Jft"/>
-                            <constraint firstItem="O4a-Xl-WCs" firstAttribute="top" secondItem="Mv0-Zc-Z7K" secondAttribute="bottom" constant="8" id="u86-RS-xsY"/>
-                            <constraint firstItem="Uee-0j-aNJ" firstAttribute="trailing" secondItem="rV2-ac-D4Z" secondAttribute="trailing" constant="20" id="ulU-NX-GEa"/>
-                            <constraint firstItem="FfR-R0-uFp" firstAttribute="top" secondItem="Uee-0j-aNJ" secondAttribute="top" id="xVO-UC-van"/>
+                            <constraint firstItem="gQz-IF-weJ" firstAttribute="top" secondItem="Mv0-Zc-Z7K" secondAttribute="bottom" constant="8" id="6W0-xC-CkF"/>
+                            <constraint firstItem="rV2-ac-D4Z" firstAttribute="leading" secondItem="Uee-0j-aNJ" secondAttribute="leading" constant="20" id="C49-Vi-Wjf"/>
+                            <constraint firstItem="Mv0-Zc-Z7K" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="GlH-2v-XT0"/>
+                            <constraint firstItem="26y-cX-jpA" firstAttribute="leading" secondItem="Uee-0j-aNJ" secondAttribute="leading" constant="20" id="Hqi-SG-ob4"/>
+                            <constraint firstItem="gQz-IF-weJ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="QCx-qc-uzx"/>
+                            <constraint firstItem="rV2-ac-D4Z" firstAttribute="top" secondItem="26y-cX-jpA" secondAttribute="bottom" constant="40" id="RWp-uI-uNR"/>
+                            <constraint firstItem="Uee-0j-aNJ" firstAttribute="trailing" secondItem="26y-cX-jpA" secondAttribute="trailing" constant="20" id="sP7-MY-JuZ"/>
+                            <constraint firstItem="Mv0-Zc-Z7K" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-100" id="tE4-G1-s4Q"/>
+                            <constraint firstItem="Uee-0j-aNJ" firstAttribute="bottom" secondItem="rV2-ac-D4Z" secondAttribute="bottom" constant="20" id="vdL-5L-fTf"/>
+                            <constraint firstItem="Uee-0j-aNJ" firstAttribute="trailing" secondItem="rV2-ac-D4Z" secondAttribute="trailing" constant="20" id="vsl-ul-mBm"/>
+                            <constraint firstItem="26y-cX-jpA" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="xSg-2H-kP5"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Uee-0j-aNJ"/>
                     </view>
@@ -104,7 +111,8 @@
                     </navigationItem>
                     <connections>
                         <outlet property="button" destination="rV2-ac-D4Z" id="8Vg-aF-YBA"/>
-                        <outlet property="decibel" destination="O4a-Xl-WCs" id="Dhu-qZ-aSA"/>
+                        <outlet property="decibel" destination="gQz-IF-weJ" id="v7i-Ex-tVH"/>
+                        <outlet property="image" destination="26y-cX-jpA" id="F4z-0f-66t"/>
                         <outlet property="settingsButton" destination="FfR-R0-uFp" id="WOX-JF-jS5"/>
                         <outlet property="timerLabel" destination="Mv0-Zc-Z7K" id="AiK-JM-25y"/>
                     </connections>
