--- a/brewingtimer/Base.lproj/Main.storyboard
+++ b/brewingtimer/Base.lproj/Main.storyboard
@@ -26,9 +26,8 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FfR-R0-uFp">
-                                <rect key="frame" x="364" y="20" width="30" height="53"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FfR-R0-uFp">
+                                <rect key="frame" x="364" y="28" width="30" height="53"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="34"/>
                                 <state key="normal">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -83,7 +82,9 @@
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="FfR-R0-uFp" firstAttribute="top" secondItem="Uee-0j-aNJ" secondAttribute="top" constant="8" id="4JF-8K-V5I"/>
                             <constraint firstItem="gQz-IF-weJ" firstAttribute="top" secondItem="Mv0-Zc-Z7K" secondAttribute="bottom" constant="8" id="6W0-xC-CkF"/>
+                            <constraint firstItem="Uee-0j-aNJ" firstAttribute="trailing" secondItem="FfR-R0-uFp" secondAttribute="trailing" constant="20" id="A7i-8l-Ubb"/>
                             <constraint firstItem="rV2-ac-D4Z" firstAttribute="leading" secondItem="Uee-0j-aNJ" secondAttribute="leading" constant="20" id="C49-Vi-Wjf"/>
                             <constraint firstItem="Mv0-Zc-Z7K" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="GlH-2v-XT0"/>
                             <constraint firstItem="26y-cX-jpA" firstAttribute="leading" secondItem="Uee-0j-aNJ" secondAttribute="leading" constant="20" id="Hqi-SG-ob4"/>
@@ -204,7 +205,7 @@
                                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="-40" minValue="-70" maxValue="-10" translatesAutoresizingMaskIntoConstraints="NO" id="taM-2C-2QE">
+                                                <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="-40" minValue="-80" maxValue="0.0" translatesAutoresizingMaskIntoConstraints="NO" id="taM-2C-2QE">
                                                     <rect key="frame" x="18" y="42" width="378" height="31"/>
                                                     <connections>
                                                         <action selector="sensitivityChange:" destination="878-Pa-hXm" eventType="valueChanged" id="Osq-Sx-Rcb"/>
